@@ -21,7 +21,10 @@ package org.apache.iceberg.rest;
 import static org.apache.iceberg.types.Types.NestedField.required;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.assertj.core.api.InstanceOfAssertFactories.map;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyMap;
+import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.atLeastOnce;
 import static org.mockito.Mockito.times;
@@ -32,7 +35,9 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
+import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
@@ -62,10 +67,11 @@ import org.apache.iceberg.exceptions.NotFoundException;
 import org.apache.iceberg.exceptions.ServiceFailureException;
 import org.apache.iceberg.expressions.Expressions;
 import org.apache.iceberg.inmemory.InMemoryCatalog;
+import org.apache.iceberg.relocated.com.google.common.collect.ImmutableList;
 import org.apache.iceberg.relocated.com.google.common.collect.ImmutableMap;
 import org.apache.iceberg.relocated.com.google.common.collect.Lists;
 import org.apache.iceberg.relocated.com.google.common.collect.Maps;
-import org.apache.iceberg.rest.RESTCatalogAdapter.HTTPMethod;
+import org.apache.iceberg.rest.HTTPRequest.HTTPMethod;
 import org.apache.iceberg.rest.RESTSessionCatalog.SnapshotMode;
 import org.apache.iceberg.rest.auth.AuthSessionUtil;
 import org.apache.iceberg.rest.auth.OAuth2Properties;
@@ -115,35 +121,41 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
         "in-memory",
         ImmutableMap.of(CatalogProperties.WAREHOUSE_LOCATION, warehouse.getAbsolutePath()));
 
-    Map<String, String> catalogHeaders =
-        ImmutableMap.of("Authorization", "Bearer client-credentials-token:sub=catalog");
-    Map<String, String> contextHeaders =
-        ImmutableMap.of("Authorization", "Bearer client-credentials-token:sub=user");
+    HTTPHeaders catalogHeaders =
+        HTTPHeaders.of(
+            Map.of(
+                "Authorization",
+                "Bearer client-credentials-token:sub=catalog",
+                "test-header",
+                "test-value"));
+    HTTPHeaders contextHeaders =
+        HTTPHeaders.of(
+            Map.of(
+                "Authorization",
+                "Bearer client-credentials-token:sub=user",
+                "test-header",
+                "test-value"));
 
     RESTCatalogAdapter adaptor =
         new RESTCatalogAdapter(backendCatalog) {
           @Override
           public <T extends RESTResponse> T execute(
-              RESTCatalogAdapter.HTTPMethod method,
-              String path,
-              Map<String, String> queryParams,
-              Object body,
+              HTTPRequest request,
               Class<T> responseType,
-              Map<String, String> headers,
-              Consumer<ErrorResponse> errorHandler) {
+              Consumer<ErrorResponse> errorHandler,
+              Consumer<Map<String, String>> responseHeaders) {
             // this doesn't use a Mockito spy because this is used for catalog tests, which have
             // different method calls
-            if (!"v1/oauth/tokens".equals(path)) {
-              if ("v1/config".equals(path)) {
-                assertThat(headers).containsAllEntriesOf(catalogHeaders);
+            if (!"v1/oauth/tokens".equals(request.path())) {
+              if ("v1/config".equals(request.path())) {
+                assertThat(request.headers().entries()).containsAll(catalogHeaders.entries());
               } else {
-                assertThat(headers).containsAllEntriesOf(contextHeaders);
+                assertThat(request.headers().entries()).containsAll(contextHeaders.entries());
               }
             }
-            Object request = roundTripSerialize(body, "request");
-            T response =
-                super.execute(
-                    method, path, queryParams, request, responseType, headers, errorHandler);
+            Object body = roundTripSerialize(request.body(), "request");
+            HTTPRequest req = ImmutableHTTPRequest.builder().from(request).body(body).build();
+            T response = super.execute(req, responseType, errorHandler, responseHeaders);
             T responseAfterSerialization = roundTripSerialize(response, "response");
             return responseAfterSerialization;
           }
@@ -174,7 +186,11 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     RESTCatalog catalog =
         new RESTCatalog(
             context,
-            (config) -> HTTPClient.builder(config).uri(config.get(CatalogProperties.URI)).build());
+            (config) ->
+                HTTPClient.builder(config)
+                    .uri(config.get(CatalogProperties.URI))
+                    .withHeaders(RESTUtil.configHeaders(config))
+                    .build());
     catalog.setConf(conf);
     Map<String, String> properties =
         ImmutableMap.of(
@@ -182,8 +198,20 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
             httpServer.getURI().toString(),
             CatalogProperties.FILE_IO_IMPL,
             "org.apache.iceberg.inmemory.InMemoryFileIO",
+            CatalogProperties.TABLE_DEFAULT_PREFIX + "default-key1",
+            "catalog-default-key1",
+            CatalogProperties.TABLE_DEFAULT_PREFIX + "default-key2",
+            "catalog-default-key2",
+            CatalogProperties.TABLE_DEFAULT_PREFIX + "override-key3",
+            "catalog-default-key3",
+            CatalogProperties.TABLE_OVERRIDE_PREFIX + "override-key3",
+            "catalog-override-key3",
+            CatalogProperties.TABLE_OVERRIDE_PREFIX + "override-key4",
+            "catalog-override-key4",
             "credential",
-            "catalog:12345");
+            "catalog:12345",
+            "header.test-header",
+            "test-value");
     catalog.initialize(
         catalogName,
         ImmutableMap.<String, String>builder()
@@ -259,13 +287,12 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     RESTClient testClient =
         new RESTCatalogAdapter(backendCatalog) {
           @Override
-          public <T extends RESTResponse> T get(
-              String path,
-              Map<String, String> queryParams,
+          public <T extends RESTResponse> T execute(
+              HTTPRequest request,
               Class<T> responseType,
-              Map<String, String> headers,
-              Consumer<ErrorResponse> errorHandler) {
-            if ("v1/config".equals(path)) {
+              Consumer<ErrorResponse> errorHandler,
+              Consumer<Map<String, String>> responseHeaders) {
+            if ("v1/config".equals(request.path())) {
               return castResponse(
                   responseType,
                   ConfigResponse.builder()
@@ -275,10 +302,11 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
                               CatalogProperties.CACHE_ENABLED,
                               "false",
                               CatalogProperties.WAREHOUSE_LOCATION,
-                              queryParams.get(CatalogProperties.WAREHOUSE_LOCATION) + "warehouse"))
+                              request.queryParameters().get(CatalogProperties.WAREHOUSE_LOCATION)
+                                  + "warehouse"))
                       .build());
             }
-            return super.get(path, queryParams, responseType, headers, errorHandler);
+            return super.execute(request, responseType, errorHandler, responseHeaders);
           }
         };
 
@@ -322,6 +350,26 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
   }
 
   @Test
+  public void testDefaultHeadersPropagated() {
+    RESTCatalog catalog = new RESTCatalog();
+    Map<String, String> properties =
+        Map.of(
+            CatalogProperties.URI,
+            httpServer.getURI().toString(),
+            OAuth2Properties.CREDENTIAL,
+            "catalog:secret",
+            "header.test-header",
+            "test-value",
+            "header.test-header2",
+            "test-value2");
+    catalog.initialize("test", properties);
+    assertThat(catalog)
+        .extracting("sessionCatalog.client.baseHeaders")
+        .asInstanceOf(map(String.class, String.class))
+        .containsEntry("test-header2", "test-value2");
+  }
+
+  @Test
   public void testCatalogBasicBearerToken() {
     Map<String, String> catalogHeaders = ImmutableMap.of("Authorization", "Bearer bearer-token");
 
@@ -332,26 +380,20 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     catalog.initialize(
         "prod", ImmutableMap.of(CatalogProperties.URI, "ignored", "token", "bearer-token"));
 
-    assertThat(catalog.tableExists(TableIdentifier.of("ns", "table"))).isFalse();
+    assertThat(catalog.tableExists(TBL)).isFalse();
 
     // the bearer token should be used for all interactions
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
             eq(ConfigResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.HEAD),
-            eq("v1/namespaces/ns/tables/table"),
+            reqMatcher(HTTPMethod.HEAD, RESOURCE_PATHS.table(TBL), catalogHeaders),
             any(),
             any(),
-            any(),
-            eq(catalogHeaders),
             any());
   }
 
@@ -368,37 +410,28 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     catalog.initialize(
         "prod", ImmutableMap.of(CatalogProperties.URI, "ignored", "credential", "catalog:secret"));
 
-    assertThat(catalog.tableExists(TableIdentifier.of("ns", "table"))).isFalse();
+    assertThat(catalog.tableExists(TBL)).isFalse();
 
     // no token or credential for catalog token exchange
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.POST),
-            eq("v1/oauth/tokens"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.POST, "v1/oauth/tokens", emptyHeaders),
             eq(OAuthTokenResponse.class),
-            eq(emptyHeaders),
+            any(),
             any());
     // no token or credential for config
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
             eq(ConfigResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
     // use the catalog token for all interactions
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.HEAD),
-            eq("v1/namespaces/ns/tables/table"),
+            reqMatcher(HTTPMethod.HEAD, RESOURCE_PATHS.table(TBL), catalogHeaders),
             any(),
             any(),
-            any(),
-            eq(catalogHeaders),
             any());
   }
 
@@ -423,37 +456,28 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
             OAuth2Properties.OAUTH2_SERVER_URI,
             oauth2ServerUri));
 
-    assertThat(catalog.tableExists(TableIdentifier.of("ns", "table"))).isFalse();
+    assertThat(catalog.tableExists(TBL)).isFalse();
 
     // no token or credential for catalog token exchange
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.POST, oauth2ServerUri, emptyHeaders),
             eq(OAuthTokenResponse.class),
-            eq(emptyHeaders),
+            any(),
             any());
     // no token or credential for config
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
             eq(ConfigResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
     // use the catalog token for all interactions
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.HEAD),
-            eq("v1/namespaces/ns/tables/table"),
+            reqMatcher(HTTPMethod.HEAD, RESOURCE_PATHS.table(TBL), catalogHeaders),
             any(),
             any(),
-            any(),
-            eq(catalogHeaders),
             any());
   }
 
@@ -484,37 +508,28 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
             OAuth2Properties.OAUTH2_SERVER_URI,
             oauth2ServerUri));
 
-    assertThat(catalog.tableExists(TableIdentifier.of("ns", "table"))).isFalse();
+    assertThat(catalog.tableExists(TBL)).isFalse();
 
     // use the bearer token for config
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
             eq(ConfigResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
     // use the bearer token to fetch the context token
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.POST, oauth2ServerUri, catalogHeaders),
             eq(OAuthTokenResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
     // use the context token for table existence check
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.HEAD),
-            eq("v1/namespaces/ns/tables/table"),
+            reqMatcher(HTTPMethod.HEAD, RESOURCE_PATHS.table(TBL), contextHeaders),
             any(),
             any(),
-            any(),
-            eq(contextHeaders),
             any());
   }
 
@@ -547,47 +562,35 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
             OAuth2Properties.OAUTH2_SERVER_URI,
             oauth2ServerUri));
 
-    assertThat(catalog.tableExists(TableIdentifier.of("ns", "table"))).isFalse();
+    assertThat(catalog.tableExists(TBL)).isFalse();
 
     // call client credentials with no initial auth
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.POST, oauth2ServerUri, emptyHeaders),
             eq(OAuthTokenResponse.class),
-            eq(emptyHeaders),
+            any(),
             any());
     // use the client credential token for config
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
             eq(ConfigResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
     // use the client credential to fetch the context token
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.POST, oauth2ServerUri, catalogHeaders),
             eq(OAuthTokenResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
     // use the context token for table existence check
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.HEAD),
-            eq("v1/namespaces/ns/tables/table"),
+            reqMatcher(HTTPMethod.HEAD, RESOURCE_PATHS.table(TBL), contextHeaders),
             any(),
             any(),
-            any(),
-            eq(contextHeaders),
             any());
   }
 
@@ -622,47 +625,35 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
             OAuth2Properties.OAUTH2_SERVER_URI,
             oauth2ServerUri));
 
-    assertThat(catalog.tableExists(TableIdentifier.of("ns", "table"))).isFalse();
+    assertThat(catalog.tableExists(TBL)).isFalse();
 
     // use the bearer token for client credentials
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.POST, oauth2ServerUri, initHeaders),
             eq(OAuthTokenResponse.class),
-            eq(initHeaders),
+            any(),
             any());
     // use the client credential token for config
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
             eq(ConfigResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
     // use the client credential to fetch the context token
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.POST, oauth2ServerUri, catalogHeaders),
             eq(OAuthTokenResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
     // use the context token for table existence check
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.HEAD),
-            eq("v1/namespaces/ns/tables/table"),
+            reqMatcher(HTTPMethod.HEAD, RESOURCE_PATHS.table(TBL), contextHeaders),
             any(),
             any(),
-            any(),
-            eq(contextHeaders),
             any());
   }
 
@@ -818,16 +809,13 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
             .build();
     catalog.initialize("prod", initializationProperties);
 
-    assertThat(catalog.tableExists(TableIdentifier.of("ns", "table"))).isFalse();
+    assertThat(catalog.tableExists(TBL)).isFalse();
 
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
             eq(ConfigResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
 
     // token passes a static token. otherwise, validate a client credentials or token exchange
@@ -835,34 +823,22 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     if (!credentials.containsKey("token")) {
       Mockito.verify(adapter)
           .execute(
-              eq(HTTPMethod.POST),
-              eq(oauth2ServerUri),
-              any(),
-              any(),
+              reqMatcher(HTTPMethod.POST, oauth2ServerUri, catalogHeaders),
               eq(OAuthTokenResponse.class),
-              eq(catalogHeaders),
+              any(),
               any());
     }
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.HEAD),
-            eq("v1/namespaces/ns/tables/table"),
+            reqMatcher(HTTPMethod.HEAD, RESOURCE_PATHS.table(TBL), expectedHeaders),
             any(),
             any(),
-            any(),
-            eq(expectedHeaders),
             any());
     if (!optionalOAuthParams.isEmpty()) {
       Mockito.verify(adapter)
-          .execute(
-              eq(HTTPMethod.POST),
+          .postForm(
               eq(oauth2ServerUri),
-              any(),
-              Mockito.argThat(
-                  body ->
-                      ((Map<String, String>) body)
-                          .keySet()
-                          .containsAll(optionalOAuthParams.keySet())),
+              Mockito.argThat(body -> body.keySet().containsAll(optionalOAuthParams.keySet())),
               eq(OAuthTokenResponse.class),
               eq(catalogHeaders),
               any());
@@ -984,10 +960,7 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     Mockito.doAnswer(refsAnswer)
         .when(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq(paths.table(TABLE)),
-            eq(ImmutableMap.of("snapshots", "refs")),
-            any(),
+            reqMatcher(HTTPMethod.GET, paths.table(TABLE), Map.of(), Map.of("snapshots", "refs")),
             eq(LoadTableResponse.class),
             any(),
             any());
@@ -998,10 +971,7 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     // verify that the table was loaded with the refs argument
     verify(adapter, times(1))
         .execute(
-            eq(HTTPMethod.GET),
-            eq(paths.table(TABLE)),
-            eq(ImmutableMap.of("snapshots", "refs")),
-            any(),
+            reqMatcher(HTTPMethod.GET, paths.table(TABLE), Map.of(), Map.of("snapshots", "refs")),
             eq(LoadTableResponse.class),
             any(),
             any());
@@ -1010,10 +980,7 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     assertThat(refsTables.snapshots()).containsExactlyInAnyOrderElementsOf(table.snapshots());
     verify(adapter, times(1))
         .execute(
-            eq(HTTPMethod.GET),
-            eq(paths.table(TABLE)),
-            eq(ImmutableMap.of("snapshots", "all")),
-            any(),
+            reqMatcher(HTTPMethod.GET, paths.table(TABLE), Map.of(), Map.of("snapshots", "all")),
             eq(LoadTableResponse.class),
             any(),
             any());
@@ -1110,10 +1077,7 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     Mockito.doAnswer(refsAnswer)
         .when(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq(paths.table(TABLE)),
-            eq(ImmutableMap.of("snapshots", "refs")),
-            any(),
+            reqMatcher(HTTPMethod.GET, paths.table(TABLE), Map.of(), Map.of("snapshots", "refs")),
             eq(LoadTableResponse.class),
             any(),
             any());
@@ -1124,10 +1088,7 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     // verify that the table was loaded with the refs argument
     verify(adapter, times(1))
         .execute(
-            eq(HTTPMethod.GET),
-            eq(paths.table(TABLE)),
-            eq(ImmutableMap.of("snapshots", "refs")),
-            any(),
+            reqMatcher(HTTPMethod.GET, paths.table(TABLE), Map.of(), Map.of("snapshots", "refs")),
             eq(LoadTableResponse.class),
             any(),
             any());
@@ -1137,10 +1098,7 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
         .containsExactlyInAnyOrderElementsOf(table.snapshots());
     verify(adapter, times(1))
         .execute(
-            eq(HTTPMethod.GET),
-            eq(paths.table(TABLE)),
-            eq(ImmutableMap.of("snapshots", "all")),
-            any(),
+            reqMatcher(HTTPMethod.GET, paths.table(TABLE), Map.of(), Map.of("snapshots", "all")),
             eq(LoadTableResponse.class),
             any(),
             any());
@@ -1226,10 +1184,7 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     Mockito.doAnswer(refsAnswer)
         .when(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq(paths.table(TABLE)),
-            eq(ImmutableMap.of("snapshots", "refs")),
-            any(),
+            reqMatcher(HTTPMethod.GET, paths.table(TABLE), Map.of(), Map.of("snapshots", "refs")),
             eq(LoadTableResponse.class),
             any(),
             any());
@@ -1248,7 +1203,6 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
       Map<String, String> expectedContextHeaders,
       Map<String, String> expectedTableHeaders,
       String oauth2ServerUri) {
-    TableIdentifier ident = TableIdentifier.of("ns", "table");
     Map<String, String> catalogHeaders = ImmutableMap.of("Authorization", "Bearer " + catalogToken);
 
     RESTCatalogAdapter adapter = Mockito.spy(new RESTCatalogAdapter(backendCatalog));
@@ -1267,23 +1221,17 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     Mockito.doAnswer(addTableConfig)
         .when(adapter)
         .execute(
-            eq(HTTPMethod.POST),
-            eq("v1/namespaces/ns/tables"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.POST, "v1/namespaces/ns/tables", expectedContextHeaders),
             eq(LoadTableResponse.class),
-            eq(expectedContextHeaders),
+            any(),
             any());
 
     Mockito.doAnswer(addTableConfig)
         .when(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/namespaces/ns/tables/table"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, RESOURCE_PATHS.table(TBL), expectedContextHeaders),
             eq(LoadTableResponse.class),
-            eq(expectedContextHeaders),
+            any(),
             any());
 
     SessionCatalog.SessionContext context =
@@ -1307,15 +1255,15 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
             required(2, "data", Types.StringType.get()));
 
     if (requiresNamespaceCreate()) {
-      catalog.createNamespace(ident.namespace());
+      catalog.createNamespace(TBL.namespace());
     }
 
-    Table table = catalog.createTable(ident, expectedSchema);
+    Table table = catalog.createTable(TBL, expectedSchema);
     assertThat(table.schema().asStruct())
         .as("Schema should match")
         .isEqualTo(expectedSchema.asStruct());
 
-    Table loaded = catalog.loadTable(ident); // the first load will send the token
+    Table loaded = catalog.loadTable(TBL); // the first load will send the token
     assertThat(loaded.schema().asStruct())
         .as("Schema should match")
         .isEqualTo(expectedSchema.asStruct());
@@ -1324,33 +1272,24 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
 
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
             eq(ConfigResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
     // session client credentials flow
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.POST, oauth2ServerUri, catalogHeaders),
             eq(OAuthTokenResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
 
     // create table request
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.POST),
-            eq("v1/namespaces/ns/tables"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.POST, "v1/namespaces/ns/tables", expectedContextHeaders),
             eq(LoadTableResponse.class),
-            eq(expectedContextHeaders),
+            any(),
             any());
 
     // if the table returned a bearer token or a credential, there will be no token request
@@ -1358,12 +1297,9 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
       // token exchange to get a table token
       Mockito.verify(adapter, times(1))
           .execute(
-              eq(HTTPMethod.POST),
-              eq(oauth2ServerUri),
-              any(),
-              any(),
+              reqMatcher(HTTPMethod.POST, oauth2ServerUri, expectedContextHeaders),
               eq(OAuthTokenResponse.class),
-              eq(expectedContextHeaders),
+              any(),
               any());
     }
 
@@ -1371,34 +1307,25 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
       // load table from catalog + refresh loaded table
       Mockito.verify(adapter, times(2))
           .execute(
-              eq(HTTPMethod.GET),
-              eq("v1/namespaces/ns/tables/table"),
-              any(),
-              any(),
+              reqMatcher(HTTPMethod.GET, RESOURCE_PATHS.table(TBL), expectedTableHeaders),
               eq(LoadTableResponse.class),
-              eq(expectedTableHeaders),
+              any(),
               any());
     } else {
       // load table from catalog
       Mockito.verify(adapter)
           .execute(
-              eq(HTTPMethod.GET),
-              eq("v1/namespaces/ns/tables/table"),
-              any(),
-              any(),
+              reqMatcher(HTTPMethod.GET, RESOURCE_PATHS.table(TBL), expectedContextHeaders),
               eq(LoadTableResponse.class),
-              eq(expectedContextHeaders),
+              any(),
               any());
 
       // refresh loaded table
       Mockito.verify(adapter)
           .execute(
-              eq(HTTPMethod.GET),
-              eq("v1/namespaces/ns/tables/table"),
-              any(),
-              any(),
+              reqMatcher(HTTPMethod.GET, RESOURCE_PATHS.table(TBL), expectedTableHeaders),
               eq(LoadTableResponse.class),
-              eq(expectedTableHeaders),
+              any(),
               any());
     }
   }
@@ -1426,14 +1353,7 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
 
     Mockito.doAnswer(addOneSecondExpiration)
         .when(adapter)
-        .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            any(),
-            eq(OAuthTokenResponse.class),
-            any(),
-            any());
+        .postForm(eq(oauth2ServerUri), anyMap(), eq(OAuthTokenResponse.class), anyMap(), any());
 
     Map<String, String> contextCredentials = ImmutableMap.of();
     SessionCatalog.SessionContext context =
@@ -1458,23 +1378,17 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
               // call client credentials with no initial auth
               Mockito.verify(adapter)
                   .execute(
-                      eq(HTTPMethod.POST),
-                      eq(oauth2ServerUri),
-                      any(),
-                      any(),
+                      reqMatcher(HTTPMethod.POST, oauth2ServerUri, emptyHeaders),
                       eq(OAuthTokenResponse.class),
-                      eq(emptyHeaders),
+                      any(),
                       any());
 
               // use the client credential token for config
               Mockito.verify(adapter)
                   .execute(
-                      eq(HTTPMethod.GET),
-                      eq("v1/config"),
-                      any(),
-                      any(),
+                      reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
                       eq(ConfigResponse.class),
-                      eq(catalogHeaders),
+                      any(),
                       any());
 
               // verify the first token exchange
@@ -1486,12 +1400,14 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
                       "scope", "catalog");
               Mockito.verify(adapter)
                   .execute(
-                      eq(HTTPMethod.POST),
-                      eq(oauth2ServerUri),
-                      any(),
-                      Mockito.argThat(firstRefreshRequest::equals),
+                      reqMatcher(
+                          HTTPMethod.POST,
+                          oauth2ServerUri,
+                          catalogHeaders,
+                          Map.of(),
+                          firstRefreshRequest),
                       eq(OAuthTokenResponse.class),
-                      eq(catalogHeaders),
+                      any(),
                       any());
 
               // verify that a second exchange occurs
@@ -1508,12 +1424,14 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
                       "Bearer token-exchange-token:sub=client-credentials-token:sub=catalog");
               Mockito.verify(adapter)
                   .execute(
-                      eq(HTTPMethod.POST),
-                      eq(oauth2ServerUri),
-                      any(),
-                      Mockito.argThat(secondRefreshRequest::equals),
+                      reqMatcher(
+                          HTTPMethod.POST,
+                          oauth2ServerUri,
+                          secondRefreshHeaders,
+                          Map.of(),
+                          secondRefreshRequest),
                       eq(OAuthTokenResponse.class),
-                      eq(secondRefreshHeaders),
+                      any(),
                       any());
             });
   }
@@ -1541,14 +1459,7 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
 
     Mockito.doAnswer(addOneSecondExpiration)
         .when(adapter)
-        .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            any(),
-            eq(OAuthTokenResponse.class),
-            any(),
-            any());
+        .postForm(eq(oauth2ServerUri), anyMap(), eq(OAuthTokenResponse.class), anyMap(), any());
 
     Map<String, String> contextCredentials = ImmutableMap.of();
     SessionCatalog.SessionContext context =
@@ -1571,28 +1482,33 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
         .untilAsserted(
             () -> {
               // use the exchanged catalog token
-              assertThat(catalog.tableExists(TableIdentifier.of("ns", "table"))).isFalse();
+              assertThat(catalog.tableExists(TBL)).isFalse();
 
               // call client credentials with no initial auth
+              Map<String, String> clientCredentialsRequest =
+                  ImmutableMap.of(
+                      "grant_type", "client_credentials",
+                      "client_id", "catalog",
+                      "client_secret", "secret",
+                      "scope", "catalog");
               Mockito.verify(adapter)
                   .execute(
-                      eq(HTTPMethod.POST),
-                      eq(oauth2ServerUri),
-                      any(),
-                      any(),
+                      reqMatcher(
+                          HTTPMethod.POST,
+                          oauth2ServerUri,
+                          emptyHeaders,
+                          Map.of(),
+                          clientCredentialsRequest),
                       eq(OAuthTokenResponse.class),
-                      eq(emptyHeaders),
+                      any(),
                       any());
 
               // use the client credential token for config
               Mockito.verify(adapter)
                   .execute(
-                      eq(HTTPMethod.GET),
-                      eq("v1/config"),
-                      any(),
-                      any(),
+                      reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
                       eq(ConfigResponse.class),
-                      eq(catalogHeaders),
+                      any(),
                       any());
 
               // verify the first token exchange
@@ -1604,12 +1520,14 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
                       "scope", "catalog");
               Mockito.verify(adapter)
                   .execute(
-                      eq(HTTPMethod.POST),
-                      eq(oauth2ServerUri),
-                      any(),
-                      Mockito.argThat(firstRefreshRequest::equals),
+                      reqMatcher(
+                          HTTPMethod.POST,
+                          oauth2ServerUri,
+                          catalogHeaders,
+                          Map.of(),
+                          firstRefreshRequest),
                       eq(OAuthTokenResponse.class),
-                      eq(catalogHeaders),
+                      any(),
                       any());
 
               // use the refreshed context token for table existence check
@@ -1619,12 +1537,10 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
                       "Bearer token-exchange-token:sub=client-credentials-token:sub=catalog");
               Mockito.verify(adapter)
                   .execute(
-                      eq(HTTPMethod.HEAD),
-                      eq("v1/namespaces/ns/tables/table"),
+                      reqMatcher(
+                          HTTPMethod.HEAD, RESOURCE_PATHS.table(TBL), refreshedCatalogHeader),
                       any(),
                       any(),
-                      any(),
-                      eq(refreshedCatalogHeader),
                       any());
             });
   }
@@ -1677,27 +1593,28 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
             OAuth2Properties.OAUTH2_SERVER_URI,
             oauth2ServerUri));
 
-    assertThat(catalog.tableExists(TableIdentifier.of("ns", "table"))).isFalse();
+    assertThat(catalog.tableExists(TBL)).isFalse();
 
     // call client credentials with no initial auth
+    Map<String, String> clientCredentialsRequest =
+        ImmutableMap.of(
+            "grant_type", "client_credentials",
+            "client_id", "catalog",
+            "client_secret", "12345",
+            "scope", "catalog");
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            any(),
+            reqMatcher(
+                HTTPMethod.POST, oauth2ServerUri, emptyHeaders, Map.of(), clientCredentialsRequest),
             eq(OAuthTokenResponse.class),
-            eq(emptyHeaders),
+            any(),
             any());
 
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
             eq(ConfigResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
 
     Map<String, String> firstRefreshRequest =
@@ -1708,12 +1625,14 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
             "scope", "catalog");
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            Mockito.argThat(firstRefreshRequest::equals),
+            reqMatcher(
+                HTTPMethod.POST,
+                oauth2ServerUri,
+                OAuth2Util.basicAuthHeaders(credential),
+                Map.of(),
+                firstRefreshRequest),
             eq(OAuthTokenResponse.class),
-            eq(OAuth2Util.basicAuthHeaders(credential)),
+            any(),
             any());
 
     // verify that a second exchange occurs
@@ -1725,22 +1644,24 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
             "scope", "catalog");
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            Mockito.argThat(secondRefreshRequest::equals),
+            reqMatcher(
+                HTTPMethod.POST,
+                oauth2ServerUri,
+                OAuth2Util.basicAuthHeaders(credential),
+                Map.of(),
+                secondRefreshRequest),
             eq(OAuthTokenResponse.class),
-            eq(OAuth2Util.basicAuthHeaders(credential)),
+            any(),
             any());
 
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.HEAD),
-            eq("v1/namespaces/ns/tables/table"),
+            reqMatcher(
+                HTTPMethod.HEAD,
+                RESOURCE_PATHS.table(TBL),
+                Map.of("Authorization", "Bearer token-exchange-token:sub=" + token)),
             any(),
             any(),
-            any(),
-            eq(ImmutableMap.of("Authorization", "Bearer token-exchange-token:sub=" + token)),
             any());
   }
 
@@ -1763,26 +1684,20 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     RESTCatalog catalog = new RESTCatalog(context, (config) -> adapter);
     catalog.initialize("prod", ImmutableMap.of(CatalogProperties.URI, "ignored", "token", token));
 
-    assertThat(catalog.tableExists(TableIdentifier.of("ns", "table"))).isFalse();
+    assertThat(catalog.tableExists(TBL)).isFalse();
 
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
             eq(ConfigResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
 
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.HEAD),
-            eq("v1/namespaces/ns/tables/table"),
+            reqMatcher(HTTPMethod.HEAD, RESOURCE_PATHS.table(TBL), OAuth2Util.authHeaders(token)),
             any(),
             any(),
-            any(),
-            eq(OAuth2Util.authHeaders(token)),
             any());
   }
 
@@ -1812,14 +1727,7 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
 
     Mockito.doAnswer(addOneSecondExpiration)
         .when(adapter)
-        .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            any(),
-            eq(OAuthTokenResponse.class),
-            any(),
-            any());
+        .postForm(eq(oauth2ServerUri), anyMap(), eq(OAuthTokenResponse.class), anyMap(), any());
 
     Map<String, String> firstRefreshRequest =
         ImmutableMap.of(
@@ -1831,11 +1739,9 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     // simulate that the token expired when it was about to be refreshed
     Mockito.doThrow(new RuntimeException("token expired"))
         .when(adapter)
-        .execute(
-            eq(HTTPMethod.POST),
+        .postForm(
             eq(oauth2ServerUri),
-            any(),
-            Mockito.argThat(firstRefreshRequest::equals),
+            argThat(firstRefreshRequest::equals),
             eq(OAuthTokenResponse.class),
             eq(catalogHeaders),
             any());
@@ -1864,38 +1770,41 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
         .untilAsserted(
             () -> {
               // use the exchanged catalog token
-              assertThat(catalog.tableExists(TableIdentifier.of("ns", "table"))).isFalse();
+              assertThat(catalog.tableExists(TBL)).isFalse();
 
               // call client credentials with no initial auth
+              Map<String, String> clientCredentialsRequest =
+                  ImmutableMap.of(
+                      "grant_type", "client_credentials",
+                      "client_id", "catalog",
+                      "client_secret", "secret",
+                      "scope", "catalog");
               Mockito.verify(adapter)
                   .execute(
-                      eq(HTTPMethod.POST),
-                      eq(oauth2ServerUri),
-                      any(),
-                      any(),
+                      reqMatcher(
+                          HTTPMethod.POST,
+                          oauth2ServerUri,
+                          emptyHeaders,
+                          Map.of(),
+                          clientCredentialsRequest),
                       eq(OAuthTokenResponse.class),
-                      eq(emptyHeaders),
+                      any(),
                       any());
 
               // use the client credential token for config
               Mockito.verify(adapter)
                   .execute(
-                      eq(HTTPMethod.GET),
-                      eq("v1/config"),
-                      any(),
-                      any(),
+                      reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
                       eq(ConfigResponse.class),
-                      eq(catalogHeaders),
+                      any(),
                       any());
 
               // verify the first token exchange - since an exception is thrown, we're performing
               // retries
               Mockito.verify(adapter, times(2))
-                  .execute(
-                      eq(HTTPMethod.POST),
+                  .postForm(
                       eq(oauth2ServerUri),
-                      any(),
-                      Mockito.argThat(firstRefreshRequest::equals),
+                      argThat(firstRefreshRequest::equals),
                       eq(OAuthTokenResponse.class),
                       eq(catalogHeaders),
                       any());
@@ -1903,11 +1812,9 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
               // here we make sure that the basic auth header is used after token refresh retries
               // failed
               Mockito.verify(adapter)
-                  .execute(
-                      eq(HTTPMethod.POST),
+                  .postForm(
                       eq(oauth2ServerUri),
-                      any(),
-                      Mockito.argThat(firstRefreshRequest::equals),
+                      argThat(firstRefreshRequest::equals),
                       eq(OAuthTokenResponse.class),
                       eq(basicHeaders),
                       any());
@@ -1919,12 +1826,10 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
                       "Bearer token-exchange-token:sub=client-credentials-token:sub=catalog");
               Mockito.verify(adapter)
                   .execute(
-                      eq(HTTPMethod.HEAD),
-                      eq("v1/namespaces/ns/tables/table"),
+                      reqMatcher(
+                          HTTPMethod.HEAD, RESOURCE_PATHS.table(TBL), refreshedCatalogHeader),
                       any(),
                       any(),
-                      any(),
-                      eq(refreshedCatalogHeader),
                       any());
             });
   }
@@ -1952,14 +1857,7 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
 
     Mockito.doAnswer(addOneSecondExpiration)
         .when(adapter)
-        .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            any(),
-            eq(OAuthTokenResponse.class),
-            any(),
-            any());
+        .postForm(eq(oauth2ServerUri), anyMap(), eq(OAuthTokenResponse.class), anyMap(), any());
 
     Map<String, String> contextCredentials = ImmutableMap.of();
     SessionCatalog.SessionContext context =
@@ -1986,11 +1884,9 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
             () -> {
               // call client credentials with no initial auth
               Mockito.verify(adapter)
-                  .execute(
-                      eq(HTTPMethod.POST),
+                  .postForm(
                       eq(oauth2ServerUri),
-                      any(),
-                      any(),
+                      anyMap(),
                       eq(OAuthTokenResponse.class),
                       eq(emptyHeaders),
                       any());
@@ -1998,12 +1894,9 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
               // use the client credential token for config
               Mockito.verify(adapter)
                   .execute(
-                      eq(HTTPMethod.GET),
-                      eq("v1/config"),
-                      any(),
-                      any(),
+                      reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
                       eq(ConfigResponse.class),
-                      eq(catalogHeaders),
+                      any(),
                       any());
 
               // verify the token exchange uses the right scope
@@ -2014,11 +1907,9 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
                       "subject_token_type", "urn:ietf:params:oauth:token-type:access_token",
                       "scope", scope);
               Mockito.verify(adapter)
-                  .execute(
-                      eq(HTTPMethod.POST),
+                  .postForm(
                       eq(oauth2ServerUri),
-                      any(),
-                      Mockito.argThat(firstRefreshRequest::equals),
+                      argThat(firstRefreshRequest::equals),
                       eq(OAuthTokenResponse.class),
                       eq(catalogHeaders),
                       any());
@@ -2047,14 +1938,7 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
 
     Mockito.doAnswer(addOneSecondExpiration)
         .when(adapter)
-        .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            any(),
-            eq(OAuthTokenResponse.class),
-            any(),
-            any());
+        .postForm(eq(oauth2ServerUri), anyMap(), eq(OAuthTokenResponse.class), anyMap(), any());
 
     Map<String, String> contextCredentials = ImmutableMap.of();
     SessionCatalog.SessionContext context =
@@ -2076,12 +1960,9 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
 
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
             eq(ConfigResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
   }
 
@@ -2122,23 +2003,18 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
             "scope",
             "catalog");
     Mockito.verify(adapter)
-        .execute(
-            eq(HTTPMethod.POST),
+        .postForm(
             eq(oauth2ServerUri),
-            any(),
-            Mockito.argThat(fetchTokenFromCredential::equals),
+            argThat(fetchTokenFromCredential::equals),
             eq(OAuthTokenResponse.class),
             eq(ImmutableMap.of()),
             any());
 
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
             eq(ConfigResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
   }
 
@@ -2311,20 +2187,14 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
 
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", Map.of(), Map.of()),
             eq(ConfigResponse.class),
             any(),
             any());
 
     Mockito.verify(adapter, times(numberOfItems))
         .execute(
-            eq(HTTPMethod.POST),
-            eq("v1/namespaces"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.POST, "v1/namespaces", Map.of(), Map.of()),
             eq(CreateNamespaceResponse.class),
             any(),
             any());
@@ -2375,20 +2245,18 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
 
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", Map.of(), Map.of()),
             eq(ConfigResponse.class),
             any(),
             any());
 
     Mockito.verify(adapter, times(numberOfItems))
         .execute(
-            eq(HTTPMethod.POST),
-            eq(String.format("v1/namespaces/%s/tables", namespaceName)),
-            any(),
-            any(),
+            reqMatcher(
+                HTTPMethod.POST,
+                String.format("v1/namespaces/%s/tables", namespaceName),
+                Map.of(),
+                Map.of()),
             eq(LoadTableResponse.class),
             any(),
             any());
@@ -2436,21 +2304,29 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
             .build();
 
     Table table = catalog.loadTable(TABLE);
-    ArgumentCaptor<UpdateTableRequest> captor = ArgumentCaptor.forClass(UpdateTableRequest.class);
     Mockito.doThrow(new NotAuthorizedException("not authorized"))
         .when(adapter)
-        .post(any(), any(), any(), any(Map.class), any());
+        .execute(reqMatcher(HTTPMethod.POST), any(), any(), any());
     assertThatThrownBy(() -> catalog.loadTable(TABLE).newFastAppend().appendFile(file).commit())
-        .isInstanceOf(NotAuthorizedException.class);
-    verify(adapter, atLeastOnce())
-        .post(eq(RESOURCE_PATHS.table(TABLE)), captor.capture(), any(), any(Map.class), any());
+        .isInstanceOf(NotAuthorizedException.class)
+        .hasMessage("not authorized");
 
     // Extract the UpdateTableRequest to determine the path of the manifest list that should be
     // cleaned up
-    UpdateTableRequest request = captor.getValue();
-    MetadataUpdate.AddSnapshot addSnapshot = (MetadataUpdate.AddSnapshot) request.updates().get(0);
-    assertThatThrownBy(() -> table.io().newInputFile(addSnapshot.snapshot().manifestListLocation()))
-        .isInstanceOf(NotFoundException.class);
+    assertThat(allRequests(adapter))
+        .anySatisfy(
+            req -> {
+              assertThat(req.method()).isEqualTo(HTTPMethod.POST);
+              assertThat(req.path()).isEqualTo(RESOURCE_PATHS.table(TABLE));
+              assertThat(req.body()).isInstanceOf(UpdateTableRequest.class);
+              UpdateTableRequest body = (UpdateTableRequest) req.body();
+              MetadataUpdate.AddSnapshot addSnapshot =
+                  (MetadataUpdate.AddSnapshot) body.updates().get(0);
+              assertThatThrownBy(
+                      () -> table.io().newInputFile(addSnapshot.snapshot().manifestListLocation()))
+                  .isInstanceOf(NotFoundException.class)
+                  .hasMessageContaining("No in-memory file found");
+            });
   }
 
   @Test
@@ -2465,21 +2341,27 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     catalog.createTable(TABLE, SCHEMA);
     Table table = catalog.loadTable(TABLE);
 
-    ArgumentCaptor<UpdateTableRequest> captor = ArgumentCaptor.forClass(UpdateTableRequest.class);
     Mockito.doThrow(new ServiceFailureException("some service failure"))
         .when(adapter)
-        .post(any(), any(), any(), any(Map.class), any());
+        .execute(reqMatcher(HTTPMethod.POST), any(), any(), any());
     assertThatThrownBy(() -> catalog.loadTable(TABLE).newFastAppend().appendFile(FILE_A).commit())
-        .isInstanceOf(ServiceFailureException.class);
-    verify(adapter, atLeastOnce())
-        .post(eq(RESOURCE_PATHS.table(TABLE)), captor.capture(), any(), any(Map.class), any());
+        .isInstanceOf(ServiceFailureException.class)
+        .hasMessage("some service failure");
 
     // Extract the UpdateTableRequest to determine the path of the manifest list that should still
     // exist even though the commit failed
-    UpdateTableRequest request = captor.getValue();
-    MetadataUpdate.AddSnapshot addSnapshot = (MetadataUpdate.AddSnapshot) request.updates().get(0);
-    assertThat(table.io().newInputFile(addSnapshot.snapshot().manifestListLocation()).exists())
-        .isTrue();
+    assertThat(allRequests(adapter))
+        .anySatisfy(
+            req -> {
+              assertThat(req.method()).isEqualTo(HTTPMethod.POST);
+              assertThat(req.path()).isEqualTo(RESOURCE_PATHS.table(TABLE));
+              assertThat(req.body()).isInstanceOf(UpdateTableRequest.class);
+              UpdateTableRequest body = (UpdateTableRequest) req.body();
+              MetadataUpdate.AddSnapshot addSnapshot =
+                  (MetadataUpdate.AddSnapshot) body.updates().get(0);
+              String manifestListLocation = addSnapshot.snapshot().manifestListLocation();
+              assertThat(table.io().newInputFile(manifestListLocation).exists()).isTrue();
+            });
   }
 
   @Test
@@ -2493,32 +2375,40 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
 
     catalog.createTable(TABLE, SCHEMA);
     TableIdentifier newTable = TableIdentifier.of(TABLE.namespace(), "some_table");
-    ArgumentCaptor<UpdateTableRequest> captor = ArgumentCaptor.forClass(UpdateTableRequest.class);
     Mockito.doThrow(new NotAuthorizedException("not authorized"))
         .when(adapter)
-        .post(eq(RESOURCE_PATHS.table(newTable)), any(), any(), any(Map.class), any());
+        .execute(reqMatcher(HTTPMethod.POST, RESOURCE_PATHS.table(newTable)), any(), any(), any());
 
     Transaction createTableTransaction = catalog.newCreateTableTransaction(newTable, SCHEMA);
     createTableTransaction.newAppend().appendFile(FILE_A).commit();
     assertThatThrownBy(createTableTransaction::commitTransaction)
-        .isInstanceOf(NotAuthorizedException.class);
-    verify(adapter, atLeastOnce())
-        .post(eq(RESOURCE_PATHS.table(newTable)), captor.capture(), any(), any(Map.class), any());
-    UpdateTableRequest request = captor.getValue();
-    Optional<MetadataUpdate> appendSnapshot =
-        request.updates().stream()
-            .filter(update -> update instanceof MetadataUpdate.AddSnapshot)
-            .findFirst();
+        .isInstanceOf(NotAuthorizedException.class)
+        .hasMessage("not authorized");
 
-    assertThat(appendSnapshot).isPresent();
-    MetadataUpdate.AddSnapshot addSnapshot = (MetadataUpdate.AddSnapshot) appendSnapshot.get();
-    assertThatThrownBy(
-            () ->
-                catalog
-                    .loadTable(TABLE)
-                    .io()
-                    .newInputFile(addSnapshot.snapshot().manifestListLocation()))
-        .isInstanceOf(NotFoundException.class);
+    assertThat(allRequests(adapter))
+        .anySatisfy(
+            req -> {
+              assertThat(req.method()).isEqualTo(HTTPMethod.POST);
+              assertThat(req.path()).isEqualTo(RESOURCE_PATHS.table(newTable));
+              assertThat(req.body()).isInstanceOf(UpdateTableRequest.class);
+              UpdateTableRequest body = (UpdateTableRequest) req.body();
+              Optional<MetadataUpdate> appendSnapshot =
+                  body.updates().stream()
+                      .filter(update -> update instanceof MetadataUpdate.AddSnapshot)
+                      .findFirst();
+
+              assertThat(appendSnapshot).isPresent();
+              MetadataUpdate.AddSnapshot addSnapshot =
+                  (MetadataUpdate.AddSnapshot) appendSnapshot.get();
+              assertThatThrownBy(
+                      () ->
+                          catalog
+                              .loadTable(TABLE)
+                              .io()
+                              .newInputFile(addSnapshot.snapshot().manifestListLocation()))
+                  .isInstanceOf(NotFoundException.class)
+                  .hasMessageContaining("No in-memory file found");
+            });
   }
 
   @Test
@@ -2534,29 +2424,33 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     TableIdentifier newTable = TableIdentifier.of(TABLE.namespace(), "some_table");
     Mockito.doThrow(new ServiceFailureException("some service failure"))
         .when(adapter)
-        .post(eq(RESOURCE_PATHS.table(newTable)), any(), any(), any(Map.class), any());
-    ArgumentCaptor<UpdateTableRequest> captor = ArgumentCaptor.forClass(UpdateTableRequest.class);
+        .execute(reqMatcher(HTTPMethod.POST, RESOURCE_PATHS.table(newTable)), any(), any(), any());
+
     Transaction createTableTransaction = catalog.newCreateTableTransaction(newTable, SCHEMA);
     createTableTransaction.newAppend().appendFile(FILE_A).commit();
     assertThatThrownBy(createTableTransaction::commitTransaction)
-        .isInstanceOf(ServiceFailureException.class);
-    verify(adapter, atLeastOnce())
-        .post(eq(RESOURCE_PATHS.table(newTable)), captor.capture(), any(), any(Map.class), any());
-    UpdateTableRequest request = captor.getValue();
-    Optional<MetadataUpdate> appendSnapshot =
-        request.updates().stream()
-            .filter(update -> update instanceof MetadataUpdate.AddSnapshot)
-            .findFirst();
-    assertThat(appendSnapshot).isPresent();
+        .isInstanceOf(ServiceFailureException.class)
+        .hasMessage("some service failure");
 
-    MetadataUpdate.AddSnapshot addSnapshot = (MetadataUpdate.AddSnapshot) appendSnapshot.get();
-    assertThat(
-            catalog
-                .loadTable(TABLE)
-                .io()
-                .newInputFile(addSnapshot.snapshot().manifestListLocation())
-                .exists())
-        .isTrue();
+    assertThat(allRequests(adapter))
+        .anySatisfy(
+            req -> {
+              assertThat(req.method()).isEqualTo(HTTPMethod.POST);
+              assertThat(req.path()).isEqualTo(RESOURCE_PATHS.table(newTable));
+              assertThat(req.body()).isInstanceOf(UpdateTableRequest.class);
+              UpdateTableRequest body = (UpdateTableRequest) req.body();
+              Optional<MetadataUpdate> appendSnapshot =
+                  body.updates().stream()
+                      .filter(update -> update instanceof MetadataUpdate.AddSnapshot)
+                      .findFirst();
+              assertThat(appendSnapshot).isPresent();
+
+              MetadataUpdate.AddSnapshot addSnapshot =
+                  (MetadataUpdate.AddSnapshot) appendSnapshot.get();
+              String manifestListLocation = addSnapshot.snapshot().manifestListLocation();
+              assertThat(catalog.loadTable(TABLE).io().newInputFile(manifestListLocation).exists())
+                  .isTrue();
+            });
   }
 
   @Test
@@ -2569,32 +2463,37 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     }
 
     catalog.createTable(TABLE, SCHEMA);
-    ArgumentCaptor<UpdateTableRequest> captor = ArgumentCaptor.forClass(UpdateTableRequest.class);
     Mockito.doThrow(new NotAuthorizedException("not authorized"))
         .when(adapter)
-        .post(eq(RESOURCE_PATHS.table(TABLE)), any(), any(), any(Map.class), any());
+        .execute(reqMatcher(HTTPMethod.POST, RESOURCE_PATHS.table(TABLE)), any(), any(), any());
 
     Transaction replaceTableTransaction = catalog.newReplaceTableTransaction(TABLE, SCHEMA, false);
     replaceTableTransaction.newAppend().appendFile(FILE_A).commit();
     assertThatThrownBy(replaceTableTransaction::commitTransaction)
-        .isInstanceOf(NotAuthorizedException.class);
-    verify(adapter, atLeastOnce())
-        .post(eq(RESOURCE_PATHS.table(TABLE)), captor.capture(), any(), any(Map.class), any());
-    UpdateTableRequest request = captor.getValue();
-    Optional<MetadataUpdate> appendSnapshot =
-        request.updates().stream()
-            .filter(update -> update instanceof MetadataUpdate.AddSnapshot)
-            .findFirst();
+        .isInstanceOf(NotAuthorizedException.class)
+        .hasMessage("not authorized");
 
-    assertThat(appendSnapshot).isPresent();
-    MetadataUpdate.AddSnapshot addSnapshot = (MetadataUpdate.AddSnapshot) appendSnapshot.get();
-    assertThatThrownBy(
-            () ->
-                catalog
-                    .loadTable(TABLE)
-                    .io()
-                    .newInputFile(addSnapshot.snapshot().manifestListLocation()))
-        .isInstanceOf(NotFoundException.class);
+    assertThat(allRequests(adapter))
+        .anySatisfy(
+            req -> {
+              assertThat(req.method()).isEqualTo(HTTPMethod.POST);
+              assertThat(req.path()).isEqualTo(RESOURCE_PATHS.table(TABLE));
+              assertThat(req.body()).isInstanceOf(UpdateTableRequest.class);
+              UpdateTableRequest request = (UpdateTableRequest) req.body();
+              Optional<MetadataUpdate> appendSnapshot =
+                  request.updates().stream()
+                      .filter(update -> update instanceof MetadataUpdate.AddSnapshot)
+                      .findFirst();
+
+              assertThat(appendSnapshot).isPresent();
+              MetadataUpdate.AddSnapshot addSnapshot =
+                  (MetadataUpdate.AddSnapshot) appendSnapshot.get();
+              String manifestListLocation = addSnapshot.snapshot().manifestListLocation();
+              assertThatThrownBy(
+                      () -> catalog.loadTable(TABLE).io().newInputFile(manifestListLocation))
+                  .isInstanceOf(NotFoundException.class)
+                  .hasMessageContaining("No in-memory file found");
+            });
   }
 
   @Test
@@ -2609,29 +2508,33 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     catalog.createTable(TABLE, SCHEMA);
     Mockito.doThrow(new ServiceFailureException("some service failure"))
         .when(adapter)
-        .post(eq(RESOURCE_PATHS.table(TABLE)), any(), any(), any(Map.class), any());
-    ArgumentCaptor<UpdateTableRequest> captor = ArgumentCaptor.forClass(UpdateTableRequest.class);
+        .execute(reqMatcher(HTTPMethod.POST, RESOURCE_PATHS.table(TABLE)), any(), any(), any());
+
     Transaction replaceTableTransaction = catalog.newReplaceTableTransaction(TABLE, SCHEMA, false);
     replaceTableTransaction.newAppend().appendFile(FILE_A).commit();
     assertThatThrownBy(replaceTableTransaction::commitTransaction)
-        .isInstanceOf(ServiceFailureException.class);
-    verify(adapter, atLeastOnce())
-        .post(eq(RESOURCE_PATHS.table(TABLE)), captor.capture(), any(), any(Map.class), any());
-    UpdateTableRequest request = captor.getValue();
-    Optional<MetadataUpdate> appendSnapshot =
-        request.updates().stream()
-            .filter(update -> update instanceof MetadataUpdate.AddSnapshot)
-            .findFirst();
-    assertThat(appendSnapshot).isPresent();
+        .isInstanceOf(ServiceFailureException.class)
+        .hasMessage("some service failure");
 
-    MetadataUpdate.AddSnapshot addSnapshot = (MetadataUpdate.AddSnapshot) appendSnapshot.get();
-    assertThat(
-            catalog
-                .loadTable(TABLE)
-                .io()
-                .newInputFile(addSnapshot.snapshot().manifestListLocation())
-                .exists())
-        .isTrue();
+    assertThat(allRequests(adapter))
+        .anySatisfy(
+            req -> {
+              assertThat(req.method()).isEqualTo(HTTPMethod.POST);
+              assertThat(req.path()).isEqualTo(RESOURCE_PATHS.table(TABLE));
+              assertThat(req.body()).isInstanceOf(UpdateTableRequest.class);
+              UpdateTableRequest request = (UpdateTableRequest) req.body();
+              Optional<MetadataUpdate> appendSnapshot =
+                  request.updates().stream()
+                      .filter(update -> update instanceof MetadataUpdate.AddSnapshot)
+                      .findFirst();
+              assertThat(appendSnapshot).isPresent();
+
+              MetadataUpdate.AddSnapshot addSnapshot =
+                  (MetadataUpdate.AddSnapshot) appendSnapshot.get();
+              String manifestListLocation = addSnapshot.snapshot().manifestListLocation();
+              assertThat(catalog.loadTable(TABLE).io().newInputFile(manifestListLocation).exists())
+                  .isTrue();
+            });
   }
 
   @Test
@@ -2645,22 +2548,152 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
 
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", Map.of(), Map.of()),
             eq(ConfigResponse.class),
             any(),
             any());
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.HEAD),
-            eq("v1/namespaces/non-existing"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.HEAD, "v1/namespaces/non-existing", Map.of(), Map.of()),
             any(),
             any(),
             any());
+  }
+
+  @Test
+  public void testNamespaceExistsFallbackToGETRequest() {
+    // server indicates support of loading a namespace only via GET, which is
+    // what older REST servers would send back too
+    verifyNamespaceExistsFallbackToGETRequest(
+        ConfigResponse.builder()
+            .withEndpoints(ImmutableList.of(Endpoint.V1_LOAD_NAMESPACE))
+            .build());
+  }
+
+  private void verifyNamespaceExistsFallbackToGETRequest(ConfigResponse configResponse) {
+    RESTCatalogAdapter adapter =
+        Mockito.spy(
+            new RESTCatalogAdapter(backendCatalog) {
+              @Override
+              public <T extends RESTResponse> T execute(
+                  HTTPRequest request,
+                  Class<T> responseType,
+                  Consumer<ErrorResponse> errorHandler,
+                  Consumer<Map<String, String>> responseHeaders) {
+                if ("v1/config".equals(request.path())) {
+                  return castResponse(responseType, configResponse);
+                }
+
+                return super.execute(request, responseType, errorHandler, responseHeaders);
+              }
+            });
+
+    RESTCatalog catalog =
+        new RESTCatalog(SessionCatalog.SessionContext.createEmpty(), (config) -> adapter);
+    catalog.initialize("test", ImmutableMap.of());
+
+    assertThat(catalog.namespaceExists(Namespace.of("non-existing"))).isFalse();
+
+    Mockito.verify(adapter)
+        .execute(
+            reqMatcher(HTTPMethod.GET, "v1/config", Map.of(), Map.of()),
+            eq(ConfigResponse.class),
+            any(),
+            any());
+
+    // verifies that the namespace is loaded via a GET instead of HEAD (V1_NAMESPACE_EXISTS)
+    Mockito.verify(adapter)
+        .execute(
+            reqMatcher(HTTPMethod.GET, "v1/namespaces/non-existing", Map.of(), Map.of()),
+            any(),
+            any(),
+            any());
+  }
+
+  @Test
+  public void testNamespaceExistsFallbackToGETRequestWithLegacyServer() {
+    // simulate a legacy server that doesn't send back supported endpoints, thus the
+    // client relies on the default endpoints
+    verifyNamespaceExistsFallbackToGETRequest(ConfigResponse.builder().build());
+  }
+
+  @Test
+  public void testTableExistsViaHEADRequest() {
+    RESTCatalogAdapter adapter = Mockito.spy(new RESTCatalogAdapter(backendCatalog));
+    RESTCatalog catalog =
+        new RESTCatalog(SessionCatalog.SessionContext.createEmpty(), (config) -> adapter);
+    catalog.initialize("test", ImmutableMap.of());
+
+    assertThat(catalog.tableExists(TABLE)).isFalse();
+
+    Mockito.verify(adapter)
+        .execute(
+            reqMatcher(HTTPMethod.GET, "v1/config", Map.of(), Map.of()),
+            eq(ConfigResponse.class),
+            any(),
+            any());
+    Mockito.verify(adapter)
+        .execute(
+            reqMatcher(HTTPMethod.HEAD, RESOURCE_PATHS.table(TABLE), Map.of(), Map.of()),
+            any(),
+            any(),
+            any());
+  }
+
+  @Test
+  public void testTableExistsFallbackToGETRequest() {
+    // server indicates support of loading a table only via GET, which is
+    // what older REST servers would send back too
+    verifyTableExistsFallbackToGETRequest(
+        ConfigResponse.builder().withEndpoints(ImmutableList.of(Endpoint.V1_LOAD_TABLE)).build());
+  }
+
+  private void verifyTableExistsFallbackToGETRequest(ConfigResponse configResponse) {
+    RESTCatalogAdapter adapter =
+        Mockito.spy(
+            new RESTCatalogAdapter(backendCatalog) {
+              @Override
+              public <T extends RESTResponse> T execute(
+                  HTTPRequest request,
+                  Class<T> responseType,
+                  Consumer<ErrorResponse> errorHandler,
+                  Consumer<Map<String, String>> responseHeaders) {
+                if ("v1/config".equals(request.path())) {
+                  return castResponse(responseType, configResponse);
+                }
+
+                return super.execute(request, responseType, errorHandler, responseHeaders);
+              }
+            });
+
+    RESTCatalog catalog =
+        new RESTCatalog(SessionCatalog.SessionContext.createEmpty(), (config) -> adapter);
+    catalog.initialize("test", ImmutableMap.of());
+
+    assertThat(catalog.tableExists(TABLE)).isFalse();
+
+    Mockito.verify(adapter)
+        .execute(
+            reqMatcher(HTTPMethod.GET, "v1/config", Map.of(), Map.of()),
+            eq(ConfigResponse.class),
+            any(),
+            any());
+
+    // verifies that the table is loaded via a GET instead of HEAD (V1_LOAD_TABLE)
+    Mockito.verify(adapter)
+        .execute(
+            reqMatcher(
+                HTTPMethod.GET, RESOURCE_PATHS.table(TABLE), Map.of(), Map.of("snapshots", "all")),
+            any(),
+            any(),
+            any());
+  }
+
+  @Test
+  public void testTableExistsFallbackToGETRequestWithLegacyServer() {
+    // simulate a legacy server that doesn't send back supported endpoints, thus the
+    // client relies on the default endpoints
+    verifyTableExistsFallbackToGETRequest(ConfigResponse.builder().build());
   }
 
   private RESTCatalog catalog(RESTCatalogAdapter adapter) {
@@ -2671,5 +2704,52 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
         ImmutableMap.of(
             CatalogProperties.FILE_IO_IMPL, "org.apache.iceberg.inmemory.InMemoryFileIO"));
     return catalog;
+  }
+
+  static HTTPRequest reqMatcher(HTTPMethod method) {
+    return argThat(req -> req.method() == method);
+  }
+
+  static HTTPRequest reqMatcher(HTTPMethod method, String path) {
+    return argThat(req -> req.method() == method && req.path().equals(path));
+  }
+
+  static HTTPRequest reqMatcher(HTTPMethod method, String path, Map<String, String> headers) {
+    return argThat(
+        req ->
+            req.method() == method
+                && req.path().equals(path)
+                && req.headers().equals(HTTPHeaders.of(headers)));
+  }
+
+  static HTTPRequest reqMatcher(
+      HTTPMethod method, String path, Map<String, String> headers, Map<String, String> parameters) {
+    return argThat(
+        req ->
+            req.method() == method
+                && req.path().equals(path)
+                && req.headers().equals(HTTPHeaders.of(headers))
+                && req.queryParameters().equals(parameters));
+  }
+
+  static HTTPRequest reqMatcher(
+      HTTPMethod method,
+      String path,
+      Map<String, String> headers,
+      Map<String, String> parameters,
+      Object body) {
+    return argThat(
+        req ->
+            req.method() == method
+                && req.path().equals(path)
+                && req.headers().equals(HTTPHeaders.of(headers))
+                && req.queryParameters().equals(parameters)
+                && Objects.equals(req.body(), body));
+  }
+
+  private static List<HTTPRequest> allRequests(RESTCatalogAdapter adapter) {
+    ArgumentCaptor<HTTPRequest> captor = ArgumentCaptor.forClass(HTTPRequest.class);
+    verify(adapter, atLeastOnce()).execute(captor.capture(), any(), any(), any());
+    return captor.getAllValues();
   }
 }
